--- a/index.html
+++ b/index.html
@@ -75,6 +75,7 @@
 			</div>
 			<footer style="text-align: center; background-color: white;" class="navbar navbar-fixed-bottom">
 				<br>
+				<p>Hosted by <a href="https://www.openshift.com/">OpenShift</a> | Secured by <a href="https://cloudflare.com">CloudFlare</a> | Made by <a href="https://keybase.io/online">Tom</a></p>
 			</footer>
 			<br>
 		</div>
