Remove keybase.onlineth.com/ for assets

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 		<!-- Font Awesome -->
 		<link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.4.0/css/font-awesome.min.css">
 		<!-- Custom Style -->
-		<link rel="stylesheet" type="text/css" href="https://keybase.onlineth.com/assets/css/style.css">
+		<link rel="stylesheet" type="text/css" href="/assets/css/style.css">
 	</head>
 	<body>
 		<div class="vertical-center">
@@ -86,7 +86,7 @@
 		<!-- Clipboard JS -->
 		<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/clipboard.js/1.5.3/clipboard.min.js"></script>
 		<!-- Script -->
-		<script type="text/javascript" src="https://keybase.onlineth.com/assets/js/script.js"></script>
+		<script type="text/javascript" src="/assets/js/script.js"></script>
 		<img src="https://stats.onlineth.com/js/?idsite=3&rec=1" style="border:0" alt="" />
 	</body>
 </html>
