--- a/index.html
+++ b/index.html
@@ -89,6 +89,15 @@
 		<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/clipboard.js/1.5.3/clipboard.min.js"></script>
 		<!-- Script -->
 		<script type="text/javascript" src="/assets/js/script.js"></script>
-		<img src="https://stats.onlineth.com/js/?idsite=3&rec=1" style="border:0" alt="" />
+		<script>
+		  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+		  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+		  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+		  })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+
+		  ga('create', 'UA-91022608-3', 'auto');
+		  ga('send', 'pageview');
+
+		</script>
 	</body>
 </html>
