Add 128 Fingerprint Length badge support

--- a/index.html
+++ b/index.html
@@ -39,6 +39,18 @@
 					</div>
 				</div>
 				<div id="cards" style="display:none;">
+					<br>
+					<div class="row">
+						<div class="col-sm-6">
+							<h4 class="theme-header">Fingerprint Length</h4>
+						</div>
+						<div class="col-sm-6">
+							<ul class="nav nav-pills  nav-justified">
+							  <li data-toggle="tab" class="active" id="bit64"><a>64BIT</a></li>
+							  <li data-toggle="tab" id="bit128"><a>128BIT</a></li>
+							</ul>
+						</div>
+					</div>
 					<div class="row">
 						<div class="col-sm-6">
 							<h3 class="theme-header">Default Theme</h3>
