--- a/index.html
+++ b/index.html
@@ -101,6 +101,6 @@
 		<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/clipboard.js/1.5.3/clipboard.min.js"></script>
 		<!-- Script -->
 		<script type="text/javascript" src="/assets/js/script.js"></script>
-		<img src="https://stats.onlineth.com/js/?idsite=3&rec=1" style="border:0" alt="" />
+		<img src="https://track.onlineth.com/js/?idsite=4&rec=1" style="border:0" alt="" />
 	</body>
 </html>
