New host: FastComet
Added a referral link to the host's website.

--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
 			<br>
 			<footer style="text-align: center; background-color: white;" class="navbar navbar-fixed-bottom">
 				<br>
-				<p>Hosted by <a href="https://www.openshift.com/">OpenShift</a> | Secured by <a href="https://cloudflare.com">CloudFlare</a> | Made by <a href="https://keybase.io/online">Tom</a></p>
+				<p>Hosted by <a href="https://affiliate.fastcomet.com/scripts/click.php?a_aid=59d9096e1ebe3&a_bid=aaf57ae2">FastComet</a> | Secured by <a href="https://cloudflare.com">CloudFlare</a> | Made by <a href="https://keybase.io/online">Tom</a></p>
 			</footer>
 			<br>
 		</div>
